fix wrap and card hoover on mobile

--- a/src/styles/2-components/card.scss
+++ b/src/styles/2-components/card.scss
@@ -77,4 +77,7 @@
             padding-top: 0;
         }
     }
+    .cards:hover {
+        transform: none;
+    }
 }
