--- a/src/styles/3-pages/logement.scss
+++ b/src/styles/3-pages/logement.scss
@@ -27,6 +27,7 @@ ul {
         }
         ul {
             display: flex;
+            flex-wrap: wrap;
         }
         li {
             background-color: $main-color;
